@@ -1,3 +1,7 @@
+2025-05-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/test_gh_issue_135.R: Add tests for #135
+
 2025-05-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version and date
